# open-data-platform

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  check_disasters.py  docker-compose.yml  fix_growth_rate.py  install.sh  load_crisis.py  load_emdat.py  load_fred.py  load_imf.py  load_irena.py  load_more_data.py  load_oecd.py  load_ucdp.py  load_unhcr.py  load_wid.py  load_worldbank.py  load_worldbank_historical.py  merge_disasters.py  pyproject.toml  requirements.txt  start.sh  test_db.py  test_ingest.py
.streamlit/: secrets.toml.example
analysis/: crisis_analysis.py
database/: README.md  __init__.py  connection.py  init_db.py  models.py  supabase_init.sql
database/loaders/: __init__.py  crisis_loader.py  disaster_loader.py  fred_loader.py
db/: crisis_models.py
ingestion/: __init__.py  emdat_disasters.py  fred_data.py  laeven_valencia.py  reinhart_rogoff.py  unified_data.py  worldbank_data.py
loaders/: load_emdat.py  load_irena.py  load_worldbank.py
notebooks/: 01_getting_started.ipynb
scripts/: init.sql
src/open_data/: __init__.py  config.py
src/open_data/cli/: __init__.py  main.py
src/open_data/core/: __init__.py  catalog.py  clustering.py  export.py  query.py  statistics.py  (+3 more)
web/: app.py
web/pages/: 01_explorer.py  02_timeseries.py  03_economic_crisis.py  03_map.py  04_crises.py  04_crisis_analysis.py  04_economic_crisis.py  05_acute_climatic_events.py  05_crisis_analysis.py  06_climatic_events_visualization.py  06_fed_data.py  07_acute_climatic_events.py  07_disasters.py  07_inequality.py  08_worldbank.py  99_admin.py
(+12 files in other folders)
