[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open_data"
version = "0.1.0"
description = "World Bank, IMF, and open data platform for economic analysis"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Guillermo Wechsler" }
]

dependencies = [
    # Core data processing
    "pandas>=2.0",
    "numpy>=1.24",

    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.12",

    # API clients
    "httpx>=0.25",
    "aiohttp>=3.9",
    "wbgapi>=1.0",

    # Analysis
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",

    # Visualization
    "plotly>=5.18",
    "matplotlib>=3.8",

    # CLI
    "typer>=0.9",
    "rich>=13.0",

    # Web dashboard
    "streamlit>=1.29",

    # Utilities
    "python-dotenv>=1.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.7",
    "ipykernel>=6.27",
]

[project.scripts]
opendata = "open_data.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/open_data"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
